페이징, 검색

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,21 @@
 <head>
 <title>mysite</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    {% block csslink %}{% endblock %}
+{% block csslink %}{% endblock %}
 </head>
 <body>
 	<div id="container">
 		<div id="header">
 			<h1>MySite</h1>
 			<ul>
-				<li><a href="/user/loginform">로그인</a><li>
-				<li><a href="/user/joinform">회원가입</a><li>
-				<li><a href="/user/updateform">회원정보수정</a><li>
-				<li><a href="/user/logoutform">로그아웃</a><li>
-				<li>님 안녕하세요 ^^;</li>
+				{% if request.session.authuser is None %}
+					<li><a href="/user/loginform">로그인</a></li>
+					<li><a href="/user/joinform">회원가입</a></li>
+				{% else %}
+					<li><a href="/user/updateform">회원정보수정</a></li>
+					<li><a href="/user/logout">로그아웃</a></li>
+					<li>{{ request.session.authuser.name }}님 안녕하세요 ^^;</li>
+				{% endif %}
 			</ul>
 		</div>
 		<div id="wrapper">
@@ -24,13 +27,17 @@
 		</div>
 		<div id="navigation">
 			<ul>
-				<li><a href="/">안대혁</a></li>
+				{% if request.session.authuser is None %}
+					<li><a href="/">홈</a></li>
+				{% else %}
+					<li><a href="/">{{ request.session.authuser.name }}</a></li>
+				{% endif %}
 				<li><a href="/guestbook">방명록</a></li>
 				<li><a href="/board">게시판</a></li>
 			</ul>
 		</div>
 		<div id="footer">
-			<p>(c)opyright 2015, 2016, 2017, 2018</p>
+			<p>(c)opyright 2015, 2016, 2017, 2018, 2019</p>
 		</div>
 	</div>
 </body>
